--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
-		"vite": "^6.2.6"
+		"vite": "^6.2.6",
+		"vite-plugin-devtools-json": "^0.2.0"
+	},
+	"dependencies": {
+		"@telegram-apps/sdk-svelte": "^2.0.30"
 	}
 }
