--- a/bot/vercel.json
+++ b/bot/vercel.json
@@ -6,5 +6,15 @@
   },
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/bot" }
+  ],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
+      ]
+    }
   ]
 }
