--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   "dependencies": {
     "@telegram-apps/sdk": "^3.11.4",
     "@telegram-apps/sdk-svelte": "^2.0.30",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "better-sqlite3": "^11.6.0",
+    "@types/better-sqlite3": "^7.6.11"
   }
 }
